ROUNDED theme red receive button hover-check

--- a/src/resources/css/themes/Rounded/NinjamWindow.css
+++ b/src/resources/css/themes/Rounded/NinjamWindow.css
@@ -71,6 +71,11 @@ NinjamTrackView QPushButton#receiveButton:!checked
     border-color: rgb(50,50,50);;
 }
 
+NinjamTrackView QPushButton#receiveButton:hover:!checked
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgba(255, 90, 62, 180), stop:1 rgba(175, 0, 0, 180));
+}
+
 /* buttons in ninjam track when using horizontal layout
 -------------------------------------------------------------*/
 
