--- a/src/resources/css/themes/Volcano_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Volcano_nm/NinjamWindow.css
@@ -136,6 +136,12 @@ NinjamTrackView[unlighted="true"] #receiveButton
     border: none;
 }
 
+NinjamTrackView #receiveButton:hover:!checked
+{
+    background-color: rgb(255, 40, 40);
+    border-color: rgba(0, 0, 0, 90);
+}
+
 NinjamTrackView  #channelName               /* channel name for ninjamers */
 {
     border: none;
