FLAT theme red receive button hover check (#625)
* FLAT theme red receive button hover check

* FLAT theme fix missing low cut hover

--- a/src/resources/css/themes/Flat/NinjamWindow.css
+++ b/src/resources/css/themes/Flat/NinjamWindow.css
@@ -100,6 +100,11 @@ NinjamTrackView[unlighted="true"]           /* user is not xmiting */
     background: rgba(0, 0, 0, 20);
 }
 
+NinjamTrackView #lowCutButton:hover
+{
+    color: black;
+}
+
 NinjamTrackView #lowCutButton:!checked
 {
     background-color: rgb(235, 235, 235);
@@ -118,6 +123,11 @@ NinjamTrackView[unlighted="true"] #receiveButton
     border: none;
 }
 
+NinjamTrackView #receiveButton:hover:!checked
+{
+    background-color: rgb(255, 40, 40);
+    border-color: rgba(0, 0, 0, 90);
+}
 
 NinjamTrackView  #channelName               /* channel name for ninjamers */
 {
