--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -63,15 +63,15 @@
         <file alias="de_DE.qm">../../translations/de_DE.qm</file>
         <file alias="pl_PL.qm">../../translations/pl_PL.qm</file>
     </qresource>
-
     <qresource prefix="/qt_tr">
         <file alias="qtbase_de.qm">../../translations/Qt/qtbase_de.qm</file>
         <file alias="qtbase_en.qm">../../translations/Qt/qtbase_en.qm</file>
         <file alias="qtbase_fr.qm">../../translations/Qt/qtbase_fr.qm</file>
         <file alias="qtbase_ja.qm">../../translations/Qt/qtbase_ja.qm</file>
         <file alias="qtbase_pl.qm">../../translations/Qt/qtbase_pl.qm</file>
+        <file alias="qtbase_es.qm">../../translations/Qt/qtbase_es.qm</file>
+        <file alias="qtbase_pt.qm">../../translations/Qt/qtbase_pt.qm</file>
     </qresource>
-
     <qresource prefix="/images">
         <file>receive.png</file>
         <file>transmit.png</file>
