--- a/src/resources/css/themes/Black_nm/PublicRooms.css
+++ b/src/resources/css/themes/Black_nm/PublicRooms.css
@@ -51,5 +51,5 @@ WavePeakPanel
     qproperty-peaksColor: white;
 
     /* color used to draw the loading circle */
-    qproperty-loadingColor: white;
+    qproperty-loadingColor: rgb(90, 90, 90);
 }
