--- a/src/resources/css/common/PublicRooms.css
+++ b/src/resources/css/common/PublicRooms.css
@@ -49,7 +49,19 @@ JamRoomViewPanel[empty="true"] #labelName
     font-weight: normal;
 }
 
+JamRoomViewPanel QPushButton#buttonWaveDrawingMode
+{
+    max-height: 12px;
+    min-width: 12px;
+    max-width: 12px;
+    padding: 1px;
+    background-position: center center;
+}
 
+JamRoomViewPanel QPushButton#buttonWaveDrawingMode:hover
+{
+    background-color: rgba(255, 255, 255, 200);
+}
 
 WavePeakPanel
 {
