--- a/src/resources/css/themes/Volcano_nm/PublicRooms.css
+++ b/src/resources/css/themes/Volcano_nm/PublicRooms.css
@@ -55,6 +55,20 @@ PlayerLabel
     color: white;
 }
 
+JamRoomViewPanel QPushButton#buttonWaveDrawingMode:hover
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop: 0.0 #fed87b,
+        stop: 1.0 #ffe23b);
+}
+
+JamRoomViewPanel QPushButton#buttonWaveDrawingMode:hover:checked
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop: 0.0 #B35925,
+        stop: 1.0 #b4673b);
+}
+
 WavePeakPanel
 {
     /* color used to draw the wave form */
