wavebuttons check fix

--- a/src/resources/css/themes/Volcano_nm/PublicRooms.css
+++ b/src/resources/css/themes/Volcano_nm/PublicRooms.css
@@ -55,6 +55,11 @@ PlayerLabel
     color: white;
 }
 
+JamRoomViewPanel QPushButton#buttonWaveDrawingMode:checked
+{
+    background-color: #87431c;
+}
+
 JamRoomViewPanel QPushButton#buttonWaveDrawingMode:hover
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
