--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -54,6 +54,17 @@
         <file>css/themes/Rounded/NinjamWindow.css</file>
         <file>css/themes/Rounded/PublicRooms.css</file>
     </qresource>
+    <qresource prefix="/css/themes/Ice">
+        <file>css/themes/Ice/BaseTrack.css</file>
+        <file>css/themes/Ice/Chat.css</file>
+        <file>css/themes/Ice/Chords.css</file>
+        <file>css/themes/Ice/Dialogs.css</file>
+        <file>css/themes/Ice/General.css</file>
+        <file>css/themes/Ice/LocalTrack.css</file>
+        <file>css/themes/Ice/MainWindow.css</file>
+        <file>css/themes/Ice/NinjamWindow.css</file>
+        <file>css/themes/Ice/PublicRooms.css</file>
+    </qresource>
     <qresource prefix="/tr">
         <file alias="en.qm">../../translations/en.qm</file>
         <file alias="ja_JP.qm">../../translations/ja_JP.qm</file>
@@ -478,5 +489,16 @@
         <file>map/3/7/5.png</file>
         <file>map/3/7/6.png</file>
         <file>map/3/7/7.png</file>
+    </qresource>
+    <qresource prefix="/css/themes/Ice">
+        <file>css/themes/Ice/BaseTrack.css</file>
+        <file>css/themes/Ice/Chat.css</file>
+        <file>css/themes/Ice/Chords.css</file>
+        <file>css/themes/Ice/Dialogs.css</file>
+        <file>css/themes/Ice/General.css</file>
+        <file>css/themes/Ice/LocalTrack.css</file>
+        <file>css/themes/Ice/MainWindow.css</file>
+        <file>css/themes/Ice/NinjamWindow.css</file>
+        <file>css/themes/Ice/PublicRooms.css</file>
     </qresource>
 </RCC>
