percentage text color match
for compatibility with 2.0.18 or older versions

--- a/src/resources/css/themes/Ice/PublicRooms.css
+++ b/src/resources/css/themes/Ice/PublicRooms.css
@@ -74,5 +74,5 @@ WavePeakPanel
     qproperty-loadingColor: #4E9CE5;
 
     /* color used to draw loading percentage text*/
-    color: orange;
+    color: #4E9CE5;
 }
