--- a/src/resources/css/themes/Ice/General.css
+++ b/src/resources/css/themes/Ice/General.css
@@ -146,6 +146,10 @@ QLineEdit:focus
     selection-color: white;
 }
 
+QLineEdit#groupNameField:focus
+{
+    border-color: rgba(0, 0, 0, 120)
+}
 
 
 /*  SLIDERs ++++++++++++++++++++++++++++++++ */
