--- a/src/resources/css/themes/Ice/General.css
+++ b/src/resources/css/themes/Ice/General.css
@@ -80,8 +80,9 @@ QScrollBar::handle:vertical
 
 QScrollBar::handle:horizontal
 {
-  max-width: 20px;
-  width: 20px;
+    background-color: #4E9CE5;
+    max-width: 20px;
+    width: 20px;
 }
 
 QScrollBar::add-line:vertical
