--- a/src/resources/css/themes/Ice/General.css
+++ b/src/resources/css/themes/Ice/General.css
@@ -7,13 +7,11 @@ QPushButton
     background-color: rgb(180, 207, 250);
 
     border-radius: 6px;
-    border: 1px outset rgba(0, 0, 140, 120);
 }
 
 QPushButton:checked
 {
     background-color: rgb(129, 181, 255);
-    border: 1px inset rgba(0, 0, 140, 120);
 
 }
 
@@ -64,11 +62,7 @@ QScrollBar::handle:horizontal
 {
     max-width: 20px;
     width: 20px;
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-        stop: 0.0 #FFD470,
-        stop: 0.47 #FDE5A9,
-        stop: 0.49 #FFB301,
-        stop: 0.92 #EF820D);
+    background-color: #4E9CE5;
 }
 
 QScrollBar::handle:vertical
@@ -181,7 +175,7 @@ QSlider::handle
         stop: 0.0 rgb(190,217,255),
         stop: 1.0 rgb(180,207,250));
 
-    border: 1px outset #68300F;
+    border: 1px outset rgba(0, 0, 0, 180);
 }
 
 QSlider::handle:hover
