--- a/src/resources/css/themes/Ice/LocalTrack.css
+++ b/src/resources/css/themes/Ice/LocalTrack.css
@@ -102,6 +102,7 @@ LocalTrackView[unlighted="true"] #inputPanel:hover
 {
     margin-top: 3px;
     border-radius: 6px;
+    border: 1px solid rgba(0, 0, 140, 120);
 }
 
 #xmitButton:checked
