--- a/src/Common/gui/PreferencesDialog.ui
+++ b/src/Common/gui/PreferencesDialog.ui
@@ -688,13 +688,16 @@
      <item>
       <widget class="QLabel" name="labelVstScanStatus">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <sizepolicy hsizetype="Ignored" vsizetype="Preferred">
          <horstretch>1</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="text">
         <string/>
+       </property>
+       <property name="wordWrap">
+        <bool>false</bool>
        </property>
       </widget>
      </item>
